<resources>
    <string name="app_name">Drinkerino</string>

    <string name="title_home">Drinkerino</string>
    <string name="title_liked">Gillade drinkar</string>
    <string name="title_settings">Inställningar</string>
    <string name="title_recipe">Recept</string>

    <string name="navigation_home">Start</string>
    <string name="navigation_liked">Gillade</string>
    <string name="navigation_settings">Inställningar</string>

    <string name="drink_ingredients">Ingredienser</string>
    <string name="drink_instructions">Instruktioner</string>
    <string name="drink_name">Drinknamn</string>
    <string name="drink_description">Drinkbeskrivning</string>

    <string name="filter_header">Filtrera drinkar</string>
    <string name="filter_properties">Egenskaper</string>
    <string name="filter_base_spirit">Drinkbas</string>
    <string name="filter_cancel_button">Avbryt</string>
    <string name="filter_filter_button">Filtrera</string>

    <string name="no_liked_drinks_warning">Du har inte gillat några drinkar</string>
    <string name="no_matched_drinks_warning">Inga drinkar matchade din filtrering</string>

    <string name="list_drink_name">Name</string>
    <string name="list_drink_properties">Properties</string>
    <string name="list_drink_outlined_heart">Outlined heart</string>
    <string name="list_drink_glass">Drinkglas</string>

    <string name="snackbar_drink_removed">borttagen</string>
    <string name="snackbar_drink_undo">Ångra</string>

    <string name="menu_filter">Filtrera</string>
    <string name="menu_like">Gilla</string>

    <string name="property_sweet">Söt</string>
    <string name="property_sour">Sur</string>
    <string name="property_bitter">Besk</string>
    <string name="property_acidic">Syrlig</string>
    <string name="property_salt">Salt</string>
    <string name="property_hot">Het</string>

    <string name="spirit_rum">Rom</string>
    <string name="spirit_vodka">Vodka</string>
    <string name="spirit_tequila">Tequila</string>
    <string name="spirit_gin">Gin</string>
    <string name="spirit_whiskey">Whiskey</string>
    <string name="spirit_others">Övriga</string>

    <string name="recipe_description">En %1$s %2$sdrink</string>

    <string name="active_filter_properties">Egenskaper</string>
    <string name="active_filter_basespirit">Drinkbas</string>
    <string name="active_filter_title">Filtrering</string>
</resources>
